--- a/src/app/assets/styles/components.css
+++ b/src/app/assets/styles/components.css
@@ -18,3 +18,11 @@
 .button-text:hover {
     @apply text-gray-700 underline cursor-pointer;
 }
+
+.label-text {
+    @apply block text-sm font-medium text-gray-700;
+}
+
+.input-text {
+    @apply mt-2 block w-full rounded-md border border-gray-300
+}
